covered the test for checking invalid contact by surname