@@ -6,6 +6,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 
@@ -20,10 +21,19 @@ public class SearchActionMoveTest {
     @BeforeEach
     void setUp() {
         searchActionMove = new SearchActionMove();
-        Contact contactOne = new Contact("Azidin", "Amankulov", "Japan", "996777777777");
-        Contact contactTwo = new Contact("Aibek", "Mahronovich", "China", "9966666666");
-        Contact contactThree = new Contact("Azidin", "SA", "Japan", "996777777777");
-        contactList = List.of(contactOne, contactTwo, contactThree);
+        contactList = Arrays.asList(
+                new Contact("Azidin", "Amankulov", "Japan", "996777777777"),
+                new Contact("Aibek", "Mahronovich", "China", "9966666666"),
+                new Contact("Azidin", "Mahronovich", "Japan", "996777777777"),
+                new Contact("John", "Doe", "USA", "123456789"),
+                new Contact("Jane", "Smith", "Canada", "987654321"),
+                new Contact("Emily", "Johnson", "UK", "444555666"),
+                new Contact("Michael", "Brown", "Australia", "555666777"),
+                new Contact("Sophia", "Williams", "Germany", "888999000"),
+                new Contact("Liam", "Miller", "France", "111222333"),
+                new Contact("Olivia", "Davis", "Italy", "222333444")
+        );
+
     }
 
     @Test
@@ -49,7 +59,6 @@ public class SearchActionMoveTest {
         List<Contact> foundContactsInvalid = searchActionMove.searchContactByName(contactList);
         assertEquals(0, foundContactsInvalid.size(), "Should not find any contact for invalid input");
 
-
     }
 
     @Test
@@ -60,8 +69,20 @@ public class SearchActionMoveTest {
         System.setIn(new ByteArrayInputStream(validInput.getBytes()));
         searchActionMove.setScanner(new Scanner(System.in));
         List<Contact> foundContactsValid = searchActionMove.searchContactBySurname(contactList);
-        assertEquals(1, foundContactsValid.size(), "Should find one contact");
-        assertEquals("Mahronovich", foundContactsValid.get(0).getSurname(), "Surname should match for valid input");
+        assertEquals(2, foundContactsValid.size(), "Should find one contact");
+        assertEquals("Mahronovich", foundContactsValid.get(1).getSurname(), "Surname should match for valid input");
+
+    }
+
+    @Test
+    @DisplayName("Test for checking invalid contact by surname")
+    public void searchContactByInvalidSurnameTest() {
+
+        String invalidInput = "Unknown\n";
+        System.setIn(new ByteArrayInputStream(invalidInput.getBytes()));
+        searchActionMove.setScanner(new Scanner(System.in));
+        List<Contact> foundContactsInvalid = searchActionMove.searchContactBySurname(contactList);
+        assertEquals(0, foundContactsInvalid.size(), "Should not find any contact for invalid input");
 
     }
 
